After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 634821 - Fix a BadMatch when create an icon pixmap for an ARGB visual
Fix a BadMatch when create an icon pixmap for an ARGB visual
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
2.91.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-11-14 14:40 UTC by Owen Taylor
Modified: 2010-11-19 14:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix a BadMatch when create an icon pixmap for an ARGB visual (1.95 KB, patch)
2010-11-14 14:40 UTC, Owen Taylor
none Details | Review
Create the icon pixmap with the system visual (1.47 KB, patch)
2010-11-14 14:52 UTC, Owen Taylor
none Details | Review

Description Owen Taylor 2010-11-14 14:40:10 UTC
The code was mixing the visual of the window who's icon was being
set with the default depth of the screen. Always use the system
visual and the appropriate depth.
Comment 1 Owen Taylor 2010-11-14 14:40:12 UTC
Created attachment 174438 [details] [review]
Fix a BadMatch when create an icon pixmap for an ARGB visual
Comment 2 Owen Taylor 2010-11-14 14:52:14 UTC
Created attachment 174439 [details] [review]
Create the icon pixmap with the system visual

Oops - guess I should have pulled first. I think my patch was just slightly
better than what Matthias pushed on Friday ... this difference is
encapsulated in this patch.
Comment 3 Matthias Clasen 2010-11-19 14:30:24 UTC
Thanks